[package]
name = "spine"
version = "0.1.0"
edition = "2021"
description = "General purpose high level language as simple as Lua!"
repository = "https://github.com/maytees/spine"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
